--- a/DiceMaster3600/View/Theme/ColoursTheme.xaml
+++ b/DiceMaster3600/View/Theme/ColoursTheme.xaml
@@ -29,7 +29,13 @@
     <SolidColorBrush x:Key="MeoptaDarkerBackgroundBrush" Color="{StaticResource MeoptaDarkerBackground}"/>
     <SolidColorBrush x:Key="MeoptaDarkBackgroundBrush" Color="Gray"/>
     <SolidColorBrush x:Key="MeoptaMostDarkBackgroundBrush" Color="{StaticResource MeoptaDarkBackground}"/>
-    
+
+    <!-- Notification Colors -->
+    <SolidColorBrush x:Key="InformationColor" Color="Blue"/>
+    <SolidColorBrush x:Key="SuccessColor" Color="Green"/>
+    <SolidColorBrush x:Key="ErrorColor" Color="Red"/>
+    <SolidColorBrush x:Key="WarningColor" Color="Orange"/>
+
     <!-- Additional SolidColorBrushes for Background Colors -->  
     <SolidColorBrush x:Key="TopBarBackgroundColor" Color="#506165"/>
     <SolidColorBrush x:Key="PrimaryButtonColor" Color="#f0f1f2"/>
