--- a/DiceMaster3600/View/DiceGameView.xaml
+++ b/DiceMaster3600/View/DiceGameView.xaml
@@ -4,13 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="clr-namespace:DiceMaster3600.View.Controls"
+             xmlns:conv="clr-namespace:DiceMaster3600.View.Converters"
              xmlns:vm="clr-namespace:DiceMaster3600.ViewModel"
              d:DataContext="{d:DesignInstance Type=vm:DiceGameViewModel}"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              mc:Ignorable="d">
 
     <UserControl.Resources>
+        <conv:BooleanToVisibilityConverter x:Key="VisibilityConverter"/>
+        
         <Style x:Key="InfoCardStyle" TargetType="Border">
             <Setter Property="Background" Value="White"/>
             <Setter Property="BorderThickness" Value="1"/>
@@ -26,36 +28,57 @@
             <Setter Property="Foreground" Value="{StaticResource MeoptaLightBlueBrush}"/>
         </Style>
 
-        <Style x:Key="CustomToggleButtonStyle" TargetType="{x:Type ToggleButton}">
-            <Setter Property="Background" Value="#FFDAA520"/>
-            <!-- Zlatý background -->
-            <Setter Property="Foreground" Value="White"/>
-            <!-- Bílý text -->
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Padding" Value="10,5"/>
+        <Style x:Key="StyledToggleButton" TargetType="{x:Type ToggleButton}">
+                <Setter Property="Width" Value="70"/>
+                <Setter Property="Height" Value="35"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ToggleButton}">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <ControlTemplate.Triggers>
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ToggleButton}">
+                            <Border CornerRadius="5" Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"                                   
+                                    BorderThickness="1">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                    <Ellipse x:Name="OuterCircle" Height="20" Width="20"
+                                         Fill="White"  VerticalAlignment="Center">
+                                        <Ellipse.Effect>
+                                            <DropShadowEffect Color="Black" BlurRadius="8" Opacity="0.1"/>
+                                        </Ellipse.Effect>
+                                    </Ellipse>
+                                    <Ellipse x:Name="InnerCircle" 
+                                             Height="18" Width="18"
+                                             VerticalAlignment="Center"/>
+                                    <materialIcons:MaterialIcon Name="PowerIcon" Kind="Power" Grid.Column="1"/>
+                                <ContentPresenter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+                            <ControlTemplate.Triggers>
                             <Trigger Property="IsChecked" Value="True">
-                                <Setter Property="Background" Value="#FF8B0000"/>
-                                <!-- Tmavě červená -->
+                                <Setter TargetName="InnerCircle" Property="Fill" Value="{StaticResource MeoptaLightBlueBrush }"/>
                             </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+                            <Trigger Property="IsChecked" Value="False">
+                                <Setter TargetName="InnerCircle" Property="Fill" Value="Red"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush" Value="{StaticResource MeoptaLightBlueBrush}"/>
+                                <Setter TargetName="PowerIcon" Property="Foreground" Value="Black"/>
+                            </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
     </UserControl.Resources>
-    
+
     <Grid Background="Transparent" Margin="20">
         
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="Auto"/>
@@ -69,18 +92,36 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderThickness="1"
+        <Grid Height="100">
+            <Border CornerRadius="5" Background="{StaticResource MeoptaLogoWhiteBrush}"
+                    Padding="10" 
+                    Margin="0,0,0,20" >
+                <ToggleButton Style="{StaticResource StyledToggleButton}" 
+                              HorizontalAlignment="Left"
+                              Command="{Binding StartStreamCommand}"
+                              CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}"
+                              Background="{StaticResource MeoptaBackgroundBrush}"/>
+            </Border>
+        </Grid>
+
+        <Border x:Name="ImageSection" Grid.Row="1"
+                BorderThickness="1"
                 Background="{StaticResource MeoptaLogoWhiteBrush}"
                 CornerRadius="5">
-            <Image x:Name="MyImage" />
+            <Grid>
+                <Image x:Name="MyImage" Source="{Binding ImageSource}" />
+                <ProgressBar x:Name="LoadingIndicator"
+                     Grid.Row="1"
+                     VerticalAlignment="Bottom"
+                     IsIndeterminate="True"
+                     Visibility="{Binding IsConnecting, Converter={StaticResource VisibilityConverter}}"
+                     Grid.ColumnSpan="5"
+                     Height="5"
+                     Foreground="DeepSkyBlue"/>
+            </Grid>
         </Border>
 
-        <ToggleButton Style="{StaticResource CustomToggleButtonStyle}"
-                  Content="Toggle Me"
-                  IsChecked="{Binding Path=YourBooleanProperty}"
-                  Command="{Binding YourCommand}"/>
-
-        <Grid Grid.Column="2">
+        <Grid Grid.Column="2" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -104,7 +145,6 @@
                         <TextBlock  Text="{Binding DiceInGameNumber}" FontWeight="Bold" FontSize="40" Foreground="Black" TextAlignment="Center"/>
                         <TextBlock  Text=" dices" FontSize="20" Foreground="Black" VerticalAlignment="Bottom"/>
                     </StackPanel>
-
                 </Grid>
             </Border>
 
@@ -140,7 +180,8 @@
             </Border>
         </Grid>
 
-        <Border Grid.Column="4" Style="{StaticResource InfoCardStyle}">
+        <Border Grid.Column="4" Grid.RowSpan="2"
+                Style="{StaticResource InfoCardStyle}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -150,10 +191,9 @@
                 <TextBlock Text="Gamecard" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{StaticResource MeoptaLogoBlackBrush}" FontSize="30"/>
                 <controls:YahtzeeTable Grid.Row="2" />
             </Grid>
-
         </Border>
 
-        <Border Grid.Row="2" Grid.ColumnSpan="5" CornerRadius="5" Background="{StaticResource MeoptaLogoWhiteBrush}">
+        <Border Grid.Row="3" Grid.ColumnSpan="5" CornerRadius="5" Background="{StaticResource MeoptaLogoWhiteBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -186,5 +226,6 @@
                 <ItemsControl Grid.Column="1" ItemTemplate="{StaticResource NotificationTemplate}" ItemsSource="{Binding Notifications}"/>
             </Grid>
         </Border>
+        
     </Grid>
 </UserControl>
