--- a/DiceMaster3600/View/Controls/InfoDisplayPanel.xaml
+++ b/DiceMaster3600/View/Controls/InfoDisplayPanel.xaml
@@ -75,7 +75,7 @@
                            Text="{Binding ValueText, RelativeSource={RelativeSource AncestorType={x:Type local:InfoDisplayPanel}}}"
                            VerticalAlignment="Center" 
                            Foreground="{StaticResource MeoptaLogoBlackBrush}" 
-                           FontSize="50"/> <!--{Binding ValueText, RelativeSource={RelativeSource AncestorType={x:Type local:InfoDisplayPanel}}, Converter={StaticResource fontSizeConverter}, ConverterParameter=200}-->
+                           FontSize="50"/>
                 <TextBlock x:Name="UnitTextBox" 
                            Text="{Binding UnitText, RelativeSource={RelativeSource AncestorType={x:Type local:InfoDisplayPanel}}}" 
                            Margin="0, 5" 
